# lab_os_2

./: CMakeLists.txt  README.md
src/: functions.cpp  functions.h  main.cpp
tests/: CMakeLists.txt  test_functions.cpp
